@@ -1,5 +1,14 @@
 --- ffmpeg.orig/configure	2008-03-25 19:34:49.000000000 -0400
 +++ ffmpeg/configure	2008-07-20 14:29:01.034274478 -0400
+@@ -967,7 +967,7 @@
+     thing=$1
+     pattern=$2
+     file=$source_path/$3
+-    sed -n "s/^[^#]*$pattern.*([^,]*, *\([^,]*\)\(,.*\)*).*/\1_$thing/p" "$file"
++    sed -n "s/^[^#]*$pattern.*([^,]*, *\([^,)]*\)[,)].*/\1_$thing/p" "$file"
+ }
+ 
+ ENCODER_LIST=$(find_things  encoder  ENC      libavcodec/allcodecs.c)
 @@ -1157,7 +1157,8 @@
          fi ;;
      sunos)
